--- a/contacts.html
+++ b/contacts.html
@@ -7,13 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Это мой первый гит репозиторий</h1>
-
-    <ul>
-        <li>Lorem, ipsum.</li>
-        <li>Eaque, repellat.</li>
-    </ul>
-
-    p>loren
+ <h1>Contacts</h1>
 </body>
 </html>
